Fix icon spacing on RTL using appropriate abstract specifiers.

--- a/src/amo/pages/Addon/styles.scss
+++ b/src/amo/pages/Addon/styles.scss
@@ -91,7 +91,7 @@
 
   & .Addon-icon-wrapper {
     grid-area: icon;
-    margin-right: 16px;
+    @include margin-end(16px);
   }
 
   & .Addon-info {
